@@ -11,7 +11,7 @@ Vcs-Browser: http://svn.debian.org/wsvn/pkg-postgresql/trunk/pgpool2/
 Package: pgpool2
 Architecture: any
 Depends: lsb-base (>= 3.0-3), postgresql-common (>= 26),
- ${misc:Depends}, ${shlibs:Depends}
+ ${misc:Depends}, ${shlibs:Depends}, libpgpool0 (= ${binary:Version})
 Enhances: postgresql
 Conflicts: pgpool
 Replaces: pgpool
@@ -34,9 +34,26 @@ Description: connection pool server and replication proxy for PostgreSQL
  .
  This is version 3 of pgpool-II, the second generation of pgpool.
 
+Package: libpgpool0
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: pgpool control protocol library
+ pgpool-II is a middleware that works between PostgreSQL servers and a
+ PostgreSQL database client.  This package contains the pgpool control
+ protocol library (libpcp).
+
+Package: libpgpool-dev
+Architecture: any
+Section: libdevel
+Depends: ${misc:Depends}, ${shlibs:Depends}, libpgpool0 (= ${binary:Version})
+Description: pgpool control protocol library - headers
+ pgpool-II is a middleware that works between PostgreSQL servers and a
+ PostgreSQL database client.  This package contains headers for the pgpool
+ control protocol library (libpcp).
+
 Package: postgresql-PGVERSION-pgpool2
 Architecture: any
-Depends: postgresql-PGVERSION, ${misc:Depends}, ${shlibs:Depends}
+Depends: postgresql-PGVERSION, ${misc:Depends}, ${shlibs:Depends}, libpgpool0 (= ${binary:Version})
 Description: connection pool server and replication proxy for PostgreSQL - modules
  pgpool-II is a middleware that works between PostgreSQL servers and a
  PostgreSQL database client.  This package contains support modules for
@@ -44,5 +61,5 @@ Description: connection pool server and replication proxy for PostgreSQL - modul
  .
   * pgpool-recovery
   * pgpool-regclass
-  * pgpool-walrecrunning
+  * pgpool-walrecrunning (PostgreSQL 9.0 and later)
 
