@@ -1,0 +1,3 @@
+usr/include
+usr/lib/libpcp.a
+usr/lib/libpcp.so
