@@ -1,0 +1,10 @@
+etc/pgpool2/pgpool.conf				etc/pgpool2
+etc/pgpool2/pcp.conf				etc/pgpool2
+etc/pgpool2/pool_hba.conf			etc/pgpool2
+etc/pgpool2/pgpool.conf.sample-master-slave	usr/share/doc/pgpool2/examples
+etc/pgpool2/pgpool.conf.sample-replication	usr/share/doc/pgpool2/examples
+etc/pgpool2/pgpool.conf.sample-stream		usr/share/doc/pgpool2/examples
+usr/sbin
+usr/share/man
+usr/share/pgpool-II/*.sql			usr/share/pgpool2
+usr/share/pgpool-II/pgpool.pam			usr/share/doc/pgpool2/examples
